<resources>
    <string name="app_name">Lesson1</string>
    <string name="todo">TODO</string>
    <string name="contacts">Contacts</string>
    <string name="shreak_land">Shreak_land</string>
    <string name="name">Name:</string>
    <string name="organization">Organization:</string>
    <string name="shreak">Shreak</string>
    <string name="exit">Exit</string>
    <string name="_7_960_349_23_00">+7 960 349 23 00</string>
    <string name="save">Save</string>
</resources>